# simox_ros

./: CMakeLists.txt  README.md  package.xml
action/: grasp.action  graspMesh.action
cfg/: Planner.cfg
contrib/: fix_urdf.py
dms_description/: CMakeLists.txt  package.xml
dms_description/meshes/stl/: base_link.STL  fd.STL  fk.STL  fm.STL  fp.STL  ld.STL  lk.STL  lm.STL  lp.STL  md.STL  mk.STL  mm.STL  mp.STL  tb.STL  td.STL  tk.STL  tp.STL
dms_description/meshes/wrl/: base_link.wrl  fd.wrl  fk.wrl  fm.wrl  fp.wrl  ld.wrl  lk.wrl  lm.wrl  lp.wrl  md.wrl  mk.wrl  mm.wrl  mp.wrl  tb.wrl  td.wrl  tk.wrl  tp.wrl
dms_description/robots/simox_xml/: dms.xml
dms_description/robots/urdf/: dms.urdf
include/sr_grasp_mesh_planner/: coin_viewer.hpp  grasp_action_server.hpp  grasp_planner_window.hpp  mesh_obstacle.hpp  read_ply.hpp  sr_approach_movement_bounding_box.hpp  sr_approach_movement_surface_normal.hpp
kit/: WhiteCup_800.ply  WhiteCup_NegX.ply
launch/: sr_grasp_planner.launch
pcd/: ism_half_cat.pcd
simox/: shadowhand.xml
sr_grasp_mesh_planner/: CMakeLists.txt  README.md  package.xml
sr_grasp_mesh_planner/cfg/: Planner.cfg
sr_grasp_mesh_planner/include/sr_grasp_mesh_planner/: coin_viewer.hpp  grasp_action_server.hpp  grasp_planner_window.hpp  mesh_obstacle.hpp  read_ply.hpp  sr_approach_movement_bounding_box.hpp  sr_approach_movement_surface_normal.hpp
sr_grasp_mesh_planner/launch/: sr_grasp_planner.launch
sr_grasp_mesh_planner/meshes/: README.md  WhiteCup_800_M.ply  scanned_by_mark_M.ply  scanned_by_mark_MM.ply
sr_grasp_mesh_planner/src/: grasp_action_client_mesh.cpp  grasp_action_server.cpp  grasp_planner_window.cpp  mesh_obstacle.cpp  read_ply.cpp  sr_approach_movement_bounding_box.cpp  sr_approach_movement_surface_normal.cpp
sr_grasp_mesh_planner/test/: test_grasp_mesh_planner.cpp  test_grasp_mesh_planner.test
src/: coin_viewer.cpp  grasp_action_client_mesh.cpp  grasp_action_server.cpp  grasp_planner.cpp  grasp_planner_window.cpp  mesh_obstacle.cpp  read_ply.cpp  sr_approach_movement_bounding_box.cpp  sr_approach_movement_surface_normal.cpp
test/: test_grasp_mesh_planner.cpp
ui/: GraspPlanner.ui
urdf/: gazebo_shadowhand_standalone.urdf.xacro  shadowhand.urdf  shadowhand_motor_biotac.orig.urdf
urdf_to_simox_xml/: CMakeLists.txt  README.md  package.xml  package.xml.back
urdf_to_simox_xml/CMakeModules/: FindSoQt.cmake
urdf_to_simox_xml/include/urdf_to_simox_xml/: urdf_to_simox_xml.hpp
urdf_to_simox_xml/launch/: urdf_to_simox_xml.launch
urdf_to_simox_xml/simox_xml/: README.md  dms.xml  shadowhand.xml
urdf_to_simox_xml/src/: main.cpp  urdf_to_simox_xml.cpp
