<?xml version="1.0"?>
<package>
  <name>urdf_to_simox_xml</name>
  <version>0.0.0</version>
  <description>The urdf_to_simox_xml package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="yi@shadowrobot.com">Yi Li</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>Private</license>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <author>Yi Li</author> -->

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>urdf</run_depend>
</package>