<?xml version="1.0"?>
<package>
  <name>urdf_to_simox_xml</name>
  <version>0.0.0</version>
  <description>Parse a hand model in URDF format and export to Simox XML.</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>Private</license>

  <author email="yi@shadowrobot.com">Yi Li</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>sr_grasp_description</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>sr_grasp_description</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>meshlab</run_depend>
  
</package>
